--- a/index.html
+++ b/index.html
@@ -7,14 +7,54 @@
     <!--  fontawesome link -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css' integrity='sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==' crossorigin='anonymous' referrerpolicy='no-referrer' />
     <!-- google font link -->
-    <link rel='preconnect' href='https://fonts.googleapis.com'>
-    <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
-    <link href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- header start -->
+    <header>
+        <section class="hero-sec">
+            <div class="container">
+                <div class="flex">
+                  <div class="hero-con">
+                      <h1>All Thinks Are Possible If You believe</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                    <button class="btn">Contact Us</button>
+                  </div>
+                </div>
+            </div>
+        </section>
+    </header>
+    <!-- header end -->
 
+    <!-- about start -->
+     <section id="about-sec" class="pt-130">
+
+        <div class="container">
+
+            <div class="flex">
+                <div class="about-img">
+                    <img src="./images/person.png" alt="person image">
+                </div>
+                <div class="about-con">
+                    <h3>My failures of previous year</h3>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                    <ul>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular belief.</li>
+                        <li>Contrary to popular , is not simply.</li>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular simply.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+     </section>
+    <!-- about END -->
     
     
 </body>
