--- a/index.html
+++ b/index.html
@@ -55,6 +55,39 @@
 
      </section>
     <!-- about END -->
+
+    <!-- plans section starts -->
+     <section id="plan-sec" class="pt-130">
+        <div class="container">
+            <h2>My Plan</h2>
+            <div class="flex">
+                <div class="plan-card">
+                    <img src="./images/icons/web.png" alt="web">
+                    <h4>Web Devlopment</h4>
+                    <p>I want to start</p>
+                </div>
+                <div class="plan-card">
+                    <img src="./images/icons/js.png" alt="js">
+                    <h4>Javascript</h4>
+                    <p>I want to learn</p>
+                </div>
+                <div class="plan-card">
+                    <img src="./images/icons/smoke.png" alt="smoking hut">
+                    <h4>Smoking Habit</h4>
+                    <p>I dont smoke</p>
+                </div>
+                <div class="plan-card">
+                    <img src="./images/icons/ecom.png" alt="ecom">
+                    <h4>Ecommerce</h4>
+                    <p>I want to develop</p>
+                </div>
+            </div>
+
+
+
+        </div>
+     </section>
+    <!-- plans section end -->
     
     
 </body>
