--- a/index.html
+++ b/index.html
@@ -89,6 +89,20 @@
      </section>
     <!-- plans section end -->
     
+    <!-- banner start -->
+     <section id="banner-sec" class="pt-130">
+        <div class="container">
+            <div class="flex">
+                <div class="banner-con">
+                    <h1>Always keep a positive mindset</h1>
+            <div class="btn">Call Now</div>
+                </div>
+            </div>
+        </div>
+
+     </section>
+    <!-- banner end -->
+
     
 </body>
 </html>
