--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- header end -->
 
     <!-- about start -->
-     <section id="about-sec" class="pt-130">
+     <section id="about-sec" class="mt-130">
 
         <div class="container">
 
@@ -57,7 +57,7 @@
     <!-- about END -->
 
     <!-- plans section starts -->
-     <section id="plan-sec" class="pt-130">
+     <section id="plan-sec" class="mt-130">
         <div class="container">
             <h2>My Plan</h2>
             <div class="flex">
@@ -90,7 +90,7 @@
     <!-- plans section end -->
     
     <!-- banner start -->
-     <section id="banner-sec" class="pt-130">
+     <section id="banner-sec" class="mt-130">
         <div class="container">
             <div class="flex">
                 <div class="banner-con">
@@ -102,6 +102,31 @@
 
      </section>
     <!-- banner end -->
+
+    <!-- footer start -->
+     <footer class="mt-130" id="footer-sec">
+        <div class="container">
+            <div class="flex">
+                <div class="footer-con">
+                    <h3>Future</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                    <p>Email : info@gmail.com</p>
+                    <p>Phone : 01500 00 00 00</p>
+                    <div class="icon-container">
+                        <a href="#"><img src="./images/icons/fb.png" alt="fb"></a>
+                        <a href="#"><img src="./images/icons/twitter.png" alt="twitter"></a>
+                        <a href="#"><img src="./images/icons/youtube.png" alt="youtube"></a>
+                    </div>
+                </div>
+                <form class="footer-form">
+                    <h3>Subscribe</h3>
+                    <input type="email" placeholder="Enter your email">
+                    <button class="btn" type="submit">Subscribe</button>
+                </form>
+            </div>
+        </div>
+     </footer>
+    <!-- footer end -->
 
     
 </body>
